uf8+ setting _ bug_botom_friend