@@ -7,16 +7,15 @@ import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
 import android.widget.FrameLayout;
-import android.widget.TextView;
 import android.widget.Toast;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
-import androidx.appcompat.app.AppCompatDelegate;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
 import com.example.nhom4.R;
+import com.example.nhom4.data.bean.FriendRequest;
 import com.example.nhom4.data.bean.User;
 import com.example.nhom4.ui.adapter.FriendRequestAdapter;
 import com.example.nhom4.ui.adapter.UserSuggestionAdapter;
@@ -31,6 +30,7 @@ import com.google.firebase.auth.FirebaseUser;
 import com.google.firebase.firestore.DocumentSnapshot;
 import com.google.firebase.firestore.FieldValue;
 import com.google.firebase.firestore.FirebaseFirestore;
+
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -38,24 +38,23 @@ import java.util.Map;
 
 public class FriendsBottomSheet extends BottomSheetDialogFragment {
 
-    private RecyclerView rcvRequests, rcvSuggest;
-    private TextView txtSectionTitle1; // Để đổi text "Your Friends" thành "Friend Requests"
+    private RecyclerView rcvSuggestions, rcvRequests;
 
     private FirebaseFirestore db;
     private FirebaseAuth auth;
     private String currentUserId;
 
     private List<User> suggestionList = new ArrayList<>();
-    private List<User> requestList = new ArrayList<>();
+    private List<FriendRequest> requestList = new ArrayList<>();
 
     private UserSuggestionAdapter suggestionAdapter;
     private FriendRequestAdapter requestAdapter;
 
     @Nullable
     @Override
-    public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container, @Nullable Bundle savedInstanceState) {
-        // Ép giao diện sáng/tối nếu cần (tùy chọn)
-        // AppCompatDelegate.setDefaultNightMode(AppCompatDelegate.MODE_NIGHT_YES);
+    public View onCreateView(@NonNull LayoutInflater inflater,
+                             @Nullable ViewGroup container,
+                             @Nullable Bundle savedInstanceState) {
         return inflater.inflate(R.layout.bottom_sheet_friend, container, false);
     }
 
@@ -63,7 +62,6 @@ public class FriendsBottomSheet extends BottomSheetDialogFragment {
     public void onViewCreated(@NonNull View view, @Nullable Bundle savedInstanceState) {
         super.onViewCreated(view, savedInstanceState);
 
-        // 1. Init Firebase
         db = FirebaseFirestore.getInstance();
         auth = FirebaseAuth.getInstance();
         FirebaseUser currentUser = auth.getCurrentUser();
@@ -75,137 +73,117 @@ public class FriendsBottomSheet extends BottomSheetDialogFragment {
         }
         currentUserId = currentUser.getUid();
 
-        // 2. Init Views
-        // rcvFriends ở đây mình dùng để hiển thị Lời mời kết bạn (Requests)
+        rcvSuggestions = view.findViewById(R.id.rcvSuggestions);
         rcvRequests = view.findViewById(R.id.rcvFriends);
-        rcvSuggest = view.findViewById(R.id.rcvSuggestions);
 
-        // Tìm textview tiêu đề để đổi tên cho hợp ngữ cảnh
-        // Giả sử trong layout bottom_sheet_friend, TextView "Your Friends" là con đầu tiên của LinearLayout trong ScrollView
-        // Hoặc bạn nên đặt ID cho TextView đó trong XML là @+id/tv_section_1
-        // Ở đây mình tìm tạm bằng cách duyệt view hoặc bạn thêm ID vào XML nhé.
-        // Ví dụ code giả định bạn đã thêm ID tv_section_friend_list vào layout
-        // txtSectionTitle1 = view.findViewById(R.id.tv_section_friend_list);
-        // if(txtSectionTitle1 != null) txtSectionTitle1.setText("Lời mời kết bạn");
-
-        // 3. Setup Adapters
         setupAdapters();
-
-        // 4. Load Data
         loadSuggestions();
         loadFriendRequests();
     }
 
     private void setupAdapters() {
-        // --- Adapter cho Gợi ý (Gửi kết bạn) ---
-        suggestionAdapter = new UserSuggestionAdapter(suggestionList, userToRequest -> {
-            sendFriendRequest(userToRequest);
-        });
-        rcvSuggest.setLayoutManager(new LinearLayoutManager(getContext()));
-        rcvSuggest.setAdapter(suggestionAdapter);
+        // Adapter gợi ý kết bạn
+        suggestionAdapter = new UserSuggestionAdapter(suggestionList, user -> sendFriendRequest(user));
+        rcvSuggestions.setLayoutManager(new LinearLayoutManager(getContext()));
+        rcvSuggestions.setAdapter(suggestionAdapter);
 
-        // --- Adapter cho Lời mời (Chấp nhận) ---
-        requestAdapter = new FriendRequestAdapter(requestList, userToAccept -> {
-            acceptFriendRequest(userToAccept);
+        // Adapter lời mời kết bạn
+        requestAdapter = new FriendRequestAdapter(requestList, new FriendRequestAdapter.OnRequestActionListener() {
+            @Override
+            public void onAccept(FriendRequest request) {
+                db.collection("relationships").document(request.getRequestId())
+                        .update("status", "accepted")
+                        .addOnSuccessListener(aVoid -> {
+                            Toast.makeText(getContext(), "Đã chấp nhận " + request.getRequesterId(), Toast.LENGTH_SHORT).show();
+                            requestList.remove(request);
+                            requestAdapter.notifyDataSetChanged();
+                        })
+                        .addOnFailureListener(e ->
+                                Toast.makeText(getContext(), "Lỗi cập nhật: " + e.getMessage(), Toast.LENGTH_SHORT).show()
+                        );
+            }
+
+            @Override
+            public void onDecline(FriendRequest request) {
+                db.collection("relationships").document(request.getRequestId())
+                        .update("status", "rejected")
+                        .addOnSuccessListener(aVoid -> {
+                            Toast.makeText(getContext(), "Đã từ chối " + request.getRequesterId(), Toast.LENGTH_SHORT).show();
+                            requestList.remove(request);
+                            requestAdapter.notifyDataSetChanged();
+                        })
+                        .addOnFailureListener(e ->
+                                Toast.makeText(getContext(), "Lỗi cập nhật: " + e.getMessage(), Toast.LENGTH_SHORT).show()
+                        );
+            }
         });
         rcvRequests.setLayoutManager(new LinearLayoutManager(getContext()));
         rcvRequests.setAdapter(requestAdapter);
     }
 
-    // ================= FIREBASE LOGIC =================
+    // ================= FIREBASE =================
 
-    // 1. Load danh sách gợi ý (User chưa là bạn)
-    private void loadSuggestions() {
-        db.collection("users")
-                .limit(20) // Lấy giới hạn để test
-                .get()
-                .addOnSuccessListener(queryDocumentSnapshots -> {
-                    suggestionList.clear();
-                    for (DocumentSnapshot doc : queryDocumentSnapshots) {
-                        // Không hiển thị chính mình
-                        if (!doc.getId().equals(currentUserId)) {
-                            User user = doc.toObject(User.class);
-                            if (user != null) {
-                                user.setUid(doc.getId()); // Set ID để dùng sau này
-                                suggestionList.add(user);
-                            }
-                        }
-                    }
-                    suggestionAdapter.notifyDataSetChanged();
-                })
-                .addOnFailureListener(e -> Log.e("FriendSheet", "Lỗi load user", e));
-    }
-
-    // 2. Load lời mời kết bạn (recipientId == mình, status == pending)
     private void loadFriendRequests() {
         db.collection("relationships")
                 .whereEqualTo("recipientId", currentUserId)
                 .whereEqualTo("status", "pending")
                 .get()
-                .addOnSuccessListener(querySnapshots -> {
+                .addOnSuccessListener(query -> {
                     requestList.clear();
-                    if (querySnapshots.isEmpty()) {
-                        requestAdapter.notifyDataSetChanged();
-                        return;
+                    for (DocumentSnapshot doc : query) {
+                        FriendRequest fr = doc.toObject(FriendRequest.class);
+                        if (fr != null) {
+                            fr.setRequestId(doc.getId());
+                            requestList.add(fr);
+                        }
                     }
-
-                    for (DocumentSnapshot doc : querySnapshots) {
-                        String requesterId = doc.getString("requesterId");
-
-                        // Load thông tin User của người gửi
-                        db.collection("users").document(requesterId).get()
-                                .addOnSuccessListener(userDoc -> {
-                                    User user = userDoc.toObject(User.class);
-                                    if (user != null) {
-                                        user.setUid(requesterId);
-                                        // Lưu relationshipId tạm vào object user hoặc 1 map riêng để update
-                                        // Ở đây mình giả định User bean có field extra hoặc mình query lại khi accept
-                                        requestList.add(user);
-                                        requestAdapter.notifyDataSetChanged();
-                                    }
-                                });
-                    }
-                });
+                    requestAdapter.notifyDataSetChanged(); // update RecyclerView
+                })
+                .addOnFailureListener(e ->
+                        Log.e("FriendSheet", "Load requests error", e)
+                );
     }
 
-    // 3. Gửi lời mời kết bạn
+    private void loadSuggestions() {
+        db.collection("users")
+                .limit(20)
+                .get()
+                .addOnSuccessListener(query -> {
+                    suggestionList.clear();
+                    for (DocumentSnapshot doc : query) {
+                        if (!doc.getId().equals(currentUserId)) {
+                            User user = doc.toObject(User.class);
+                            if (user != null) {
+                                user.setUid(doc.getId());
+                                suggestionList.add(user);
+                            }
+                        }
+                    }
+                    suggestionAdapter.notifyDataSetChanged(); // update RecyclerView
+                })
+                .addOnFailureListener(e -> Log.e("FriendSheet", "Load suggestions error", e));
+    }
+
+
     private void sendFriendRequest(User targetUser) {
         Map<String, Object> relationship = new HashMap<>();
         relationship.put("requesterId", currentUserId);
-        relationship.put("recipientId", targetUser.getUid()); // targetUser.getId() là UID lấy từ Firestore
+        relationship.put("recipientId", targetUser.getUid());
         relationship.put("status", "pending");
         relationship.put("createdAt", FieldValue.serverTimestamp());
-        relationship.put("members", java.util.Arrays.asList(currentUserId, targetUser.getUid()));
+        relationship.put("members", List.of(currentUserId, targetUser.getUid()));
 
         db.collection("relationships")
                 .add(relationship)
-                .addOnSuccessListener(docRef -> {
-                    Toast.makeText(getContext(), "Đã gửi lời mời đến " + targetUser.getUsername(), Toast.LENGTH_SHORT).show();
-                })
-                .addOnFailureListener(e -> {
-                    Toast.makeText(getContext(), "Lỗi gửi lời mời", Toast.LENGTH_SHORT).show();
-                });
+                .addOnSuccessListener(docRef ->
+                        Toast.makeText(getContext(), "Đã gửi lời mời đến " + targetUser.getUsername(), Toast.LENGTH_SHORT).show()
+                )
+                .addOnFailureListener(e ->
+                        Toast.makeText(getContext(), "Lỗi gửi lời mời", Toast.LENGTH_SHORT).show()
+                );
     }
 
-    // 4. Chấp nhận lời mời
-    private void acceptFriendRequest(User requesterUser) {
-        // Tìm document relationship để update
-        db.collection("relationships")
-                .whereEqualTo("requesterId", requesterUser.getUid())
-                .whereEqualTo("recipientId", currentUserId)
-                .whereEqualTo("status", "pending")
-                .get()
-                .addOnSuccessListener(querySnapshots -> {
-                    for (DocumentSnapshot doc : querySnapshots) {
-                        doc.getReference().update("status", "accepted")
-                                .addOnSuccessListener(aVoid -> {
-                                    Toast.makeText(getContext(), "Đã trở thành bạn bè!", Toast.LENGTH_SHORT).show();
-                                });
-                    }
-                });
-    }
-
-    // ================= UI CONFIGURATION =================
+    // ================= UI BOTTOM SHEET =================
 
     @Override
     public void onStart() {
@@ -214,7 +192,6 @@ public class FriendsBottomSheet extends BottomSheetDialogFragment {
         if (dialog == null) return;
 
         FrameLayout bottomSheet = dialog.findViewById(com.google.android.material.R.id.design_bottom_sheet);
-
         if (bottomSheet != null) {
             int height = (int) (Resources.getSystem().getDisplayMetrics().heightPixels * 0.95);
             bottomSheet.getLayoutParams().height = height;
@@ -231,11 +208,7 @@ public class FriendsBottomSheet extends BottomSheetDialogFragment {
                     .setTopRightCornerSize(24f)
                     .build();
 
-            // --- SỬA LỖI Ở ĐÂY ---
-            // Sử dụng R.attr.colorSurface thay vì đường dẫn dài dòng dễ gây lỗi
-            // Hoặc hardcode màu trắng nếu không quan trọng theme
             int colorSurface = MaterialColors.getColor(bottomSheet, com.google.android.material.R.attr.colorSurface);
-
             MaterialShapeDrawable drawable = new MaterialShapeDrawable(shapeModel);
             drawable.setTint(colorSurface);
             drawable.setShadowCompatibilityMode(MaterialShapeDrawable.SHADOW_COMPAT_MODE_ALWAYS);
@@ -243,6 +216,4 @@ public class FriendsBottomSheet extends BottomSheetDialogFragment {
             bottomSheet.setBackground(drawable);
         }
     }
-
-
 }
